@@ -1,6 +1,7 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 gparted.desktop.in
+include/Utils.h
 src/Dialog_Base_Partition.cc
 src/Dialog_Disklabel.cc
 src/Dialog_Filesystems.cc
