@@ -1,5 +1,12 @@
 2005-12-11 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* po/POTFILES.in: added include/Utils.h
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: replaced get_sym_path with get_short_path for
+	  cleaner code and better performance.
+
+2005-12-11 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: use statvfs instead of this ugly df-wrapping.
 
